# homebeans

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.ai_docs/: changelog.md  structure.md
.claude/: settings.local.json
data/: demo_ledger_template.yaml
src/core/: suggester.py
src/homebeans/: __init__.py  cli.py  config.py  demo_mode.py  mcp_server.py  models.py  reports.py  storage.py  viz.py
src/minha_financa/: cli.py  reports.py  storage.py  viz.py
tests/: __init__.py  test_demo_mode.py  test_get_balance.py  test_get_recent_transactions.py  test_integrity.py  test_models.py  test_report_date_filters.py  test_statistical_tools.py  test_transaction_id.py
